[P4] Phase 4 회고 작성 — Phase 4 종료
- 회고(블로그용): "증거가 로그에 없을 때 어디를 봐야 하는가" — GC 3종 비교표,
  증거 수집 도구 선택(netshoot vs pktmon), 훈련 3건의 결정적 증거 정리
- README 진행 표·CLAUDE.md 현재 상태 갱신 (다음: Phase 5 실배포·chaos)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>